Make the drop down menu align correctly

--- a/survey/survey-style.scss
+++ b/survey/survey-style.scss
@@ -79,7 +79,7 @@ button {
     width: 5%;
     height: 100%;
     background: none;
-    @include font-size(2.5rem);
+    @include font-size(2rem);
     font-weight: bold;
     margin-right: 40px;
 }
